--- a/Amazon Clone/Style.css
+++ b/Amazon Clone/Style.css
@@ -14,8 +14,6 @@
     align-items: center;
     justify-content: space-evenly;
     width: 100%;
-    position: fixed;
-    z-index: 500;
 }
 
 /* Navbar logo */
@@ -202,8 +200,6 @@
     align-items: center;
     justify-content: space-between;
     padding: 0 15px 0 15px;
-    position: relative;
-    top: 60px;
 }
 
 .panel-ops {
@@ -231,4 +227,30 @@
     height: 38px;
     display: flex;
     align-items: center;
+}
+
+/* Designing Hero-Section : main image background  */
+.hero-section {
+    height: 350px;
+    width: 100%;
+    background-image: url("Resources/hero_image.jpg");
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+}
+.hero-msg {
+    background-color: #FFFFFF;
+    color: black;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.85rem;
+    width: 96%;
+    margin-bottom: 25px;
+}
+.hero-msg a {
+    color: #007185;
+    text-decoration: none;
 }
